--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,6 @@ header {
   color: white;
 }
 
-img {
-  width: 100%;
-  height: 400px;
-}
-
 ul {
   list-style-type: none;
 }
@@ -21,6 +16,8 @@ ul {
   margin-top: 3rem;
   margin-bottom: 5rem;
   object-fit: contain;
+  width: 100%;
+  height: 400px;
 }
 
 a {
